--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,13 @@
-pipenv==2018.11.26
-argon2-cffi==19.1.0
 dj-database-url==0.5.0
 Django==2.2.5
-django-bootstrap3==11.1.0
-Faker==2.0.1
-Flask==1.1.1
+django-bootstrap4==1.0.1
+django-braces==1.13.0
+django-heroku==0.3.1
 gunicorn==19.9.0
-html5lib==1.0.1
-json5==0.8.4
-jsonschema==3.0.1
-path.py==12.0.1
+misaka==2.1.1
+pipenv==2018.11.26
 psycopg2==2.8.3
-pycodestyle==2.5.0
-pycosat==0.6.3
-pycparser==2.19
-pycurl==7.43.0.3
-pyflakes==2.1.1
-Pygments==2.4.2
-pylint==2.3.1
-pyOpenSSL==19.0.0
-pyparsing==2.4.0
-pyreadline==2.1
-pyrsistent==0.14.11
-PySocks==1.7.0
-python-dateutil==2.8.0
-requests==2.22.0
-SQLAlchemy==1.3.5
-sqlparse==0.3.0
+pytz==2019.1
 virtualenv==16.7.5
 virtualenv-clone==0.5.3
 whitenoise==4.1.3
-widgetsnbextension==3.5.0
